--- a/assets/style.css
+++ b/assets/style.css
@@ -8,24 +8,32 @@ header{
   height: 95px;
   width: 100vw;
   border-bottom: 1px solid lightgray;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  background-color: #fff;
 }
 
 .top, .down{
   height: 50%;
-  padding: 20px;
 }
 
 .top{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 30px 20px;
 }
 
+.down{
+  padding: 0 20px;
+}
+
+/* header left */
 .left{
   height: 100%;
   display: flex;
   align-items: center;
-  font-size: 22px;
   padding-top: 10px;
   color: #5F6368;
 }
@@ -36,6 +44,12 @@ header{
   cursor: pointer;
 }
 
+.left span{
+  font-size: 24px;
+}
+
+
+/* header right */
 .right{
   height: 100%;
   display: flex;
@@ -74,7 +88,7 @@ ul{
 ul li{
   display: inline;
   margin-right: 45px;
-  padding-bottom: 8px;
+  padding-bottom: 14px;
   cursor: pointer;
 }
 
@@ -86,7 +100,54 @@ ul li{
 /* main */
 
 main{
-  height: 1000px;
   width: 53%;
-  margin: 100px auto;
+  margin: 195px auto 0;
+}
+
+h1{
+  font-size: 27px;
+  padding-bottom: 20px;
+}
+
+h4{
+  padding-bottom: 60px;
+}
+
+
+/* footer */
+
+footer{
+  width: 100%;
+  height: 50px;
+  background-color: #F5F5F5;
+}
+
+.box{
+  width: 53%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+/* foooter left */
+.left{
+  font-size: 12px;
+}
+
+.left li{
+  margin: 5px;
+}
+
+
+/* footer right */
+select{
+  width: 170px;
+  margin-right: 30px;
+}
+ 
+img{
+  height: 17px;
+  margin-right: 7px;
 }
